--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "fzaninotto/faker": "^1.6"
+        "fzaninotto/faker": "^1.6",
+        "aws/aws-sdk-php": "^3.18",
+        "elasticsearch/elasticsearch": "^2.2"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
